primitives/api/test/tests/ui/declaring_own_block_with_different_name.stderr
error: `Block: BlockT` generic parameter will be added automatically by the `decl_runtime_apis!` macro! If you try to use a different trait than the substrate `Block` trait, please rename it locally.
 --> $DIR/declaring_own_block_with_different_name.rs:4:19
  |
4 |     pub trait Api<B: BlockT> {
  |                      ^^^^^^

warning: unused import: `sp_runtime::traits::Block as BlockT`
 --> $DIR/declaring_own_block_with_different_name.rs:1:5
  |
1 | use sp_runtime::traits::Block as BlockT;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
